cluster/talos/apps/homarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homarr
  labels:
    goldilocks.fairwinds.com/enabled: "true"
