cluster/talos/apps/homarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr-ingress
  namespace: homarr
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: homarr
      port:
        number: 7575
  tls:
  - hosts:
    - homarr
